update submit script